--- a/boa-connect/index.html
+++ b/boa-connect/index.html
@@ -6,13 +6,17 @@
     <title>Bihar Ophthalmic Association</title>
     <meta name="description" content="Leading organization for ophthalmology professionals in Bihar" />
     <meta name="author" content="Bihar Ophthalmic Association" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" id="favicon" />
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/derzj7d4u/image/upload/v1768477374/boa-certificates/pjm2se9296raotekzmrc.png" />
 
     <meta property="og:title" content="Bihar Ophthalmic Association" />
     <meta property="og:description" content="Leading organization for ophthalmology professionals in Bihar" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://res.cloudinary.com/derzj7d4u/image/upload/v1768477374/boa-certificates/pjm2se9296raotekzmrc.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Bihar Ophthalmic Association" />
+    <meta name="twitter:description" content="Leading organization for ophthalmology professionals in Bihar" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/derzj7d4u/image/upload/v1768477374/boa-certificates/pjm2se9296raotekzmrc.png" />
   </head>
 
   <body>
