Remove authentication from registration and membership routes, create missing database tables, update membership FAQ

--- a/boa-connect/index.html
+++ b/boa-connect/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bihar Ophthalmic Association</title>
+    <title>Ophthalmic Association of Bihar</title>
     <meta name="description" content="Leading organization for ophthalmic professionals in Bihar" />
     <meta name="author" content="Bihar Ophthalmic Association" />
     <link rel="icon" type="image/png" href="https://res.cloudinary.com/derzj7d4u/image/upload/v1768477374/boa-certificates/pjm2se9296raotekzmrc.png" />
