--- a/boa-connect/index.html
+++ b/boa-connect/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bihar Ophthalmic Association</title>
+    <title>Ophthalmic Association Of Bihar</title>
     <meta name="description" content="Leading organization for ophthalmic professionals in Bihar" />
-    <meta name="author" content="Bihar Ophthalmic Association" />
+    <meta name="author" content="Ophthalmic Association Of Bihar" />
     <link rel="icon" type="image/png" href="https://res.cloudinary.com/derzj7d4u/image/upload/v1768477374/boa-certificates/pjm2se9296raotekzmrc.png" />
 
-    <meta property="og:title" content="Bihar Ophthalmic Association" />
+    <meta property="og:title" content="Ophthalmic Association Of Bihar" />
     <meta property="og:description" content="Leading organization for ophthalmic professionals in Bihar" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://res.cloudinary.com/derzj7d4u/image/upload/v1768477374/boa-certificates/pjm2se9296raotekzmrc.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Bihar Ophthalmic Association" />
+    <meta name="twitter:title" content="Ophthalmic Association Of Bihar" />
     <meta name="twitter:description" content="Leading organization for ophthalmic professionals in Bihar" />
     <meta name="twitter:image" content="https://res.cloudinary.com/derzj7d4u/image/upload/v1768477374/boa-certificates/pjm2se9296raotekzmrc.png" />
   </head>
